@@ -1,5 +1,6 @@
 0.12.15
 =======
+ * Write album id3 tag with external lame encoder
  * Fixed on-the-fly Video DVD creation
  * Fixed data project verification in case filenames had to be shortened due to Joliet limitations.
 
